Update 7.23 buttons (pygame),.md

--- a/Today I learned/7.23 buttons (pygame),.md
+++ b/Today I learned/7.23 buttons (pygame),.md
@@ -8,8 +8,8 @@
 - Mouse Click event - set a variable 'self.clicked = False'
 - Set another variable in constructor if Button class is used in another module (There are some variables that works only if that variables are in that module)
 
-## Case 1
-#### if Button class exists in the same module
+## Case 1 - Target shooting
+## if Button class exists in the same module
 
 <em>main.py</em>
 ```py
@@ -77,9 +77,8 @@ while run:
 
     pygame.display.flip()
 ```
-## Case 2
 
-#### if Button class exists in another module
+## if Button class exists in another module
 
 <em>main.py</em>
 ```py
