Update 7.23 buttons (pygame),.md

--- a/Today I learned/7.23 buttons (pygame),.md
+++ b/Today I learned/7.23 buttons (pygame),.md
@@ -154,3 +154,85 @@ class Button:
         return action
     
 ```
+---
+## Case 2
+
+![Untitled 113](https://user-images.githubusercontent.com/96529477/180625185-1065e8ad-27a4-43b5-bd4f-9cb66bce3562.gif)
+
+```py
+import pygame
+
+pygame.init()
+
+screenwidth = 800
+screenheight = 800
+screen = pygame.display.set_mode((screenwidth,screenheight))
+pygame.display.set_caption("Practice clicking buttons")
+white = (255,255,255)
+black = (0, 0, 0)
+
+
+class Menu:
+    
+    def __init__(self, font_name, size, x, y, color, text):
+        
+        self.font_kind = pygame.font.Font(font_name,size)
+        self.content = self.font_kind.render(text,True, color)
+        self.rect = self.content.get_rect()
+        
+        self.rect.x = x
+        self.rect.y = y
+        
+        #if I want to make it centered automatically
+        #self.rect.center = x,y
+
+        self.clicked = False
+        
+
+    def draw_text(self,screen):
+        screen.blit(self.content, self.rect)
+        
+    def check_click(self):
+        self.mouse_position = pygame.mouse.get_pos()
+        active = False
+        if self.rect.collidepoint(self.mouse_position):
+            if pygame.mouse.get_pressed()[0] and self.clicked == False:
+                self.clicked = True
+                active = True
+        if pygame.mouse.get_pressed()[0] == False and self.clicked:
+            self.clicked = False
+        return active
+
+
+startmenu = Menu("8bitwonder.ttf",32,250, 220,white,"Start")
+howtoplaymenu = Menu("8bitwonder.ttf",32,250,320,white,"How to play")
+creditmenu = Menu("8bitwonder.ttf",32,250,420,white,"Credit")
+exitmenu = Menu("8bitwonder.ttf",32,250,520,white,"Exit")
+
+run = True
+while run:
+    
+    screen.fill(black)
+    
+    startmenu.draw_text(screen)
+    creditmenu.draw_text(screen)
+    howtoplaymenu.draw_text(screen)
+    exitmenu.draw_text(screen)
+    
+    if startmenu.check_click():
+        print("start menu clicked")
+    if creditmenu.check_click():
+        print("credit menu clicked")
+    if howtoplaymenu.check_click():
+        print("how to play menu clicked")
+    if exitmenu.check_click():
+        run = False
+    
+    
+    for event in pygame.event.get():
+        if event.type == pygame.QUIT:
+            run = False
+            pygame.quit()
+ 
+    pygame.display.flip()
+```
