Update 7.23 buttons (pygame),.md

--- a/Today I learned/7.23 buttons (pygame),.md
+++ b/Today I learned/7.23 buttons (pygame),.md
@@ -11,6 +11,8 @@
 ## Case 1 - Target shooting
 ## if Button class exists in the same module
 
+![Untitled 114](https://user-images.githubusercontent.com/96529477/180626019-56e23e6f-628e-4dbd-b816-07d650266ccd.gif)
+
 <em>main.py</em>
 ```py
 import pygame
@@ -58,7 +60,7 @@ class Button:
 
 run = True
 
-start_button = Button(150,350,startbutton_img)
+start_button = Button(250,350,startbutton_img)
 exit_button = Button(450,350,exitbutton_img)
 
 
@@ -104,7 +106,7 @@ exitbutton_img_rect = exitbutton_img.get_rect()
 
 run = True
 
-start_button = Button(150,350,startbutton_img)
+start_button = Button(250,350,startbutton_img)
 exit_button = Button(450,350,exitbutton_img)
 
 
