Update 7.23 buttons (pygame),.md

--- a/Today I learned/7.23 buttons (pygame),.md
+++ b/Today I learned/7.23 buttons (pygame),.md
@@ -5,7 +5,7 @@
 - Create Button class(either in the same module, or different module) and use its instances in the game
 - Method that includes 'screen.blit()' in Button class should be called inside of game loop
 - Hovering over effect - pygame.mouse.get_pos()
-- Mouse Click event - set a variable 'self.clicked = False'
+- Mouse Click event (is not as easy as I thought) we need to set a variable like 'self.clicked = False'
 - Set another variable in constructor if Button class is used in another module (There are some variables that works only if that variables are in that module)
 
 ## Case 1 - Target shooting
@@ -238,3 +238,70 @@ while run:
  
     pygame.display.flip()
 ```
+
+# Case 2 Upgraded - 
+- Hover over effect added to each menu
+- Credit page linked
+
+In the same `Menu` Class, I added 
+
+```py
+class Menu:
+# --- code snip
+def hovered(self):
+
+    self.mouse_position = pygame.mouse.get_pos()
+
+    if self.rect.collidepoint(self.mouse_position) and self.hand == False:
+        self.hand = True
+        print("hovered")
+        pygame.mouse.set_cursor(pygame.SYSTEM_CURSOR_HAND)
+        return True
+    elif self.rect.collidepoint(self.mouse_position) == False and self.hand == True:
+        self.hand = False
+        print("hovered2")
+        pygame.mouse.set_cursor(pygame.SYSTEM_CURSOR_ARROW)
+        return False
+```
+It is just like mouse clicking, I had to set another boolean variable to test both cases
+
+where case 1 : `hovering over the text`
+
+case 2 : `not hovering over the text` 
+
+But since we are trying in while loop, if we write code like this,
+```py
+def hovered(self):
+
+    self.mouse_position = pygame.mouse.get_pos()
+
+    if self.rect.collidepoint(self.mouse_position):
+        print("hovered")
+        pygame.mouse.set_cursor(pygame.SYSTEM_CURSOR_HAND)
+        return True
+    elif self.rect.collidepoint(self.mouse_position) == False:
+        print("hovered2")
+        pygame.mouse.set_cursor(pygame.SYSTEM_CURSOR_ARROW)
+        return False
+```
+we would probably get this result
+```
+...
+hovered
+hovered2
+hovered2
+hovered2
+hovered
+hovered2
+hovered2
+hovered2
+hovered
+hovered2
+hovered2
+hovered2
+
+```
+So, we have to add one more boolean variable to control the number of hover-over effect.
+
+Just one time hover over the text, just one time over out of the text.
+
