Update 7.20 Pygame( not allowing diagonal movement, What to think of when we create game).md

--- a/Today I learned/7.20 Pygame( not allowing diagonal movement, What to think of when we create game).md
+++ b/Today I learned/7.20 Pygame( not allowing diagonal movement, What to think of when we create game).md
@@ -69,13 +69,13 @@
             if event.type == pygame.KEYUP:
                 if event.key == pygame.K_LEFT:
                     heldkeys.remove("left")
-                if event.key == pygame.K_RIGHT
+                if event.key == pygame.K_RIGHT:
                     heldkeys.remove("right")
         for _ in heldkeys:
             if "left" in heldkeys:
                 characterX -= character_speed
             if "right" in heldkeys:
-                characterX += character_spreed
+                characterX += character_speed
     ```
 # Not allowing diagonal movement
 ```py
