Update 7.25 main menu.md

--- a/Today I learned/7.25 main menu.md
+++ b/Today I learned/7.25 main menu.md
@@ -1,1 +1,283 @@
 
+![Untitled 117](https://user-images.githubusercontent.com/96529477/180826466-efb9f109-0c4f-467e-a834-07f293864b0e.gif)
+
+```py
+import pygame
+
+pygame.init()
+
+screenwidth = 800
+screenheight = 800
+screen = pygame.display.set_mode((screenwidth,screenheight))
+pygame.display.set_caption("Practice clicking buttons")
+white = (255,255,255)
+black = (0, 0, 0)
+green = (0,255,0)
+
+
+# Game Control 
+
+# Ultimate control - to exit the game
+run = True
+
+# Main Menu control - to exit the main menu
+main = True
+
+# How to play menu control - to exit the how to play menu
+howtoplay = False
+
+# Credit menu control - to exit the credit menu
+credit = False
+
+
+# buttons
+class Button:
+    
+
+    def __init__(self, font_name, size, x, y, color, text):
+        self.font_name = font_name
+        self.color = color
+        self.text = text
+        self.size = size
+
+        self.font_kind = pygame.font.Font(self.font_name,size)
+        self.content = self.font_kind.render(self.text,True, self.color)
+        self.rect = self.content.get_rect()
+        
+        self.rect.x = x
+        self.rect.y = y
+        
+        #if I want to make it centered automatically
+        #self.rect.center = x,y
+        self.clicked = False
+        self.hand = False
+
+        self.move = 100
+
+
+    def draw_text(self,screen):
+        screen.blit(self.content, self.rect)
+
+
+    def hovered(self,change_color,change_size, change_back_color = white,change_back_size = 32,handshape = True, size_reset = False, x = 0,y = 0):
+        active = False
+        self.mouse_position = pygame.mouse.get_pos()
+        if size_reset == True:
+            self.rect = self.content.get_rect()
+            self.rect.x = x
+            self.rect.y = y
+        
+        if self.rect.collidepoint(self.mouse_position) and self.hand == False:
+            self.hand = True
+            print("hovered")
+            if handshape:
+                pygame.mouse.set_cursor(pygame.SYSTEM_CURSOR_HAND)
+            else:
+                pygame.mouse.set_cursor(pygame.SYSTEM_CURSOR_ARROW)
+            self.color = change_color
+            self.size = change_size
+            self.font_kind = pygame.font.Font(self.font_name,self.size)
+            self.content = self.font_kind.render(self.text, True, self.color)
+            active = True
+
+        elif self.rect.collidepoint(self.mouse_position) == False and self.hand == True:
+            self.hand = False
+            print("hovered2")
+            pygame.mouse.set_cursor(pygame.SYSTEM_CURSOR_ARROW)
+            self.color = change_back_color
+            self.size = change_back_size
+            self.font_kind = pygame.font.Font(self.font_name,self.size)
+            self.content = self.font_kind.render(self.text, True, self.color)
+       
+        return active
+        
+
+    def check_click(self):
+        self.mouse_position = pygame.mouse.get_pos()
+        active = False
+        if self.rect.collidepoint(self.mouse_position):
+            if pygame.mouse.get_pressed()[0] == 1 and self.clicked == False:
+                self.clicked = True
+                active = True
+            if pygame.mouse.get_pressed()[0] == 0 and self.clicked:
+                self.clicked = False
+
+        return active
+
+
+    def key_movement(self):
+
+        for event in pygame.event.get():
+            
+            if event.type == pygame.QUIT:
+                pygame.quit()
+            
+            if event.type == pygame.KEYDOWN:
+                if event.key == pygame.K_UP:
+                    print("up key pressed")
+                    self.rect.y -= self.move
+                if event.key == pygame.K_DOWN:
+                    print("down key pressed")
+                    self.rect.y += self.move
+                if event.key == pygame.K_RETURN:
+                    print("Enter key pressed")
+                    self.content = self.font_kind.render(self.text,True, green)
+                    return True
+                if event.key == pygame.K_BACKSPACE:
+                    print("Backspace key pressed")
+
+            if event.type == pygame.KEYUP:
+                if event.key == pygame.K_UP:
+                    self.move = 0
+                if event.key == pygame.K_DOWN:
+                    self.move = 0
+                if event.key == pygame.K_RETURN:
+                    self.content = self.font_kind.render(self.text, True, white)
+        
+            self.move = 100
+
+
+
+# Main Menu buttons
+main_mainmenu_button = Button("8bitwonder.ttf",64,250,220,white,"Main Menu")
+main_start_button = Button("8bitwonder.ttf",32,250, 220,white,"Start")
+main_howtoplay_button = Button("8bitwonder.ttf",32,250,320,white,"How to play")
+main_credit_button = Button("8bitwonder.ttf",32,250,420,white,"Credit")
+main_exit_button = Button("8bitwonder.ttf",32,250,520,white,"Exit")
+main_x_button = Button("8bitwonder.ttf",24,210,225,white,"*")
+
+main_mainmenu_button.rect.center = screenwidth/2,100
+
+# How to play buttons
+howtoplay_title_button = Button("8bitwonder.ttf",32,250,220,white,"How to play")
+#howtoplay_description = Button("8bitwonder.ttf",25,250,220,white,"description")
+howtoplay_back_button = Button("8bitwonder.ttf",42,250,520,white,"Back")
+
+howtoplay_title_button.rect.center = screenwidth/2, screenheight/2 - 300
+howtoplay_back_button.rect.center = screenwidth/2, screenheight/2 + 200
+
+# Credit Menu buttons
+credit_title_button = Button("8bitwonder.ttf", 42,250,220,white, "Credit")
+credit_made_by_button = Button("8bitwonder.ttf",64,250,320,white,"Jinsung Kim")
+credit_back_button_button = Button("8bitwonder.ttf",42,250,520,white,"Back")
+
+credit_title_button.rect.center = screenwidth/2, screenheight/2 - 200
+credit_made_by_button.rect.center = screenwidth/2, screenheight/2 - 100
+credit_back_button_button.rect.center = screenwidth/2, screenheight/2 + 200
+
+
+while run:
+    
+    screen.fill(black)
+    
+    
+    if main == True:
+        
+        if howtoplay == True:
+            
+            howtoplay_title_button.draw_text(screen)
+            howtoplay_back_button.draw_text(screen)
+
+            howtoplay_title_button.hovered(green, 32, white, 32,handshape = False)
+            
+            howtoplay_back_button.hovered(green,42,white,42)
+
+            if howtoplay_back_button.check_click():
+                
+                # game control - howtoplay menu exit
+                howtoplay = False
+            
+            for event in pygame.event.get():
+                if event.type == pygame.QUIT:
+                    run = False
+                if event.type == pygame.KEYDOWN:
+                    if event.key == pygame.K_BACKSPACE:
+                        print("backspace key pressed")
+                        main_x_button.content = main_x_button.font_kind.render(main_x_button.text,True, white)
+                        howtoplay = False
+
+        elif credit == True:
+
+            credit_title_button.draw_text(screen)
+            credit_made_by_button.draw_text(screen)
+            credit_back_button_button.draw_text(screen)
+            
+            credit_title_button.hovered(green,42,white,42,False,x=credit_title_button.rect.x, y = credit_title_button.rect.y)
+            credit_made_by_button.hovered(green,64,white,64,False,x=credit_made_by_button.rect.x, y = credit_made_by_button.rect.y)
+            
+
+            credit_back_button_button.hovered(green,42,white,42,False,x=credit_back_button_button.rect.x, y = credit_back_button_button.rect.y)
+
+
+            if credit_back_button_button.check_click():
+                print("back button clicked")
+
+                # game control - credit menu exit
+                credit = False
+
+            for event in pygame.event.get():
+                if event.type == pygame.QUIT:
+                    run = False
+                if event.type == pygame.KEYDOWN:
+                    if event.key == pygame.K_BACKSPACE:
+                        print("backspace key pressed")
+                        main_x_button.content = main_x_button.font_kind.render(main_x_button.text,True, white)
+                        credit = False
+            
+        else:
+
+            main_mainmenu_button.draw_text(screen)
+            main_start_button.draw_text(screen)
+            main_howtoplay_button.draw_text(screen)
+            main_credit_button.draw_text(screen)
+            main_exit_button.draw_text(screen)
+            main_x_button.draw_text(screen)
+
+            main_start_button.hovered(green,42, white,32,True,True,main_start_button.rect.x,main_start_button.rect.y)
+            main_howtoplay_button.hovered(green,32,white,32,False, 250,320)
+            main_credit_button.hovered(green,32,white,32,False)
+            main_exit_button.hovered((130,130,130),25,white,32,False)
+
+            if main_start_button.check_click():
+                print("start menu clicked")
+            if main_credit_button.check_click():
+                print("credit menu clicked")
+                credit = True
+            if main_howtoplay_button.check_click():
+                print("how to play menu clicked")
+                howtoplay = True
+            if main_exit_button.check_click():
+                run = False
+            
+
+            if main_x_button.key_movement():
+                
+                if main_x_button.rect.y < 250:
+                    print("START!!!")
+                    
+                elif main_x_button.rect.y < 350:
+                    print("HOW TO PLAY pressed")
+                    main_howtoplay_button.color = green
+                    howtoplay = True
+                elif main_x_button.rect.y < 450:
+                    print("CREDIT pressed")
+                    credit = True
+                elif main_x_button.rect.y < 550:
+                    print("EXIT pressed")
+                    run = False
+
+            if main_x_button.rect.y < 225:
+                main_x_button.rect.y = 225
+            if main_x_button.rect.y > 525:
+                main_x_button.rect.y = 525
+
+    for event in pygame.event.get():
+        if event.type == pygame.QUIT:
+            run = False
+            pygame.quit()
+        
+    
+        
+
+    pygame.display.flip()     
+```
