--- a/Today I learned/7.15 set.md
+++ b/Today I learned/7.15 set.md
@@ -13,7 +13,7 @@ a = {1}
 b = {3,2,4}
 
 # find if they have common elements
-print(a.isdisjoint(b))      #False
+print(a.isdisjoint(b))      #True
 
 c = {1,24,25}
 d = {1,25,24,2}
