--- a/Today I learned/7.26 set.md
+++ b/Today I learned/7.26 set.md
@@ -14,5 +14,5 @@ a = [{1,2,3},{4,5}]
 union_set = set()
 for each in a:
     union_set |= each
-print(union_set)
+print(union_set)        #{1, 2, 3, 4, 5}
 ```
