Update 7.19 character movement(pygame).md

--- a/Today I learned/7.19 character movement(pygame).md
+++ b/Today I learned/7.19 character movement(pygame).md
@@ -63,3 +63,23 @@ while run:
             
 ```
 I am sure there are some other ways to implement smooth playermovement, but so far I think I am satisfied with this.
+
+(edited on 7/28)
+
+# This is a good way to implement smooth key - movement
+```py
+playerX = 550
+playerY = 360
+player_speed = 10
+run = True
+while run:
+    keys = pygame.get_pressed()
+    if keys[pygame.K_UP]:
+        playerY -= player_speed
+    if keys[pygame.K_DOWN]:
+        playerY += player_speed
+    if keys[pygame.K_LEFT]:
+        playerX -= player_speed
+    if keys[pygame.K_RIGHT]:
+        playerX += player_speed
+```
