Update 7.19 character movement(pygame).md

--- a/Today I learned/7.19 character movement(pygame).md
+++ b/Today I learned/7.19 character movement(pygame).md
@@ -64,9 +64,9 @@ while run:
 ```
 I am sure there are some other ways to implement smooth playermovement, but so far I think I am satisfied with this.
 
-(edited on 7/28)
 
-# This is a good way to implement smooth key - movement
+
+# This is a good way to implement smooth key - movement (edited on 7/28))
 ```py
 playerX = 550
 playerY = 360
