--- a/Today I learned/7.19 character movement(pygame).md
+++ b/Today I learned/7.19 character movement(pygame).md
@@ -66,7 +66,7 @@ I am sure there are some other ways to implement smooth playermovement, but so f
 
 
 
-# This is a good way to implement smooth key - movement (edited on 7/28))
+# This is a good way to implement smooth key movement (edited on 7/28)
 ```py
 playerX = 550
 playerY = 360
