--- a/Today I learned/8.10 sys.exit().md
+++ b/Today I learned/8.10 sys.exit().md
@@ -2,7 +2,7 @@
 
 In pygame, we either press keys or mouse clicks to exit the game.
 
-<em>click x button implementation</em>
+<em>click x button -> quit game implementation</em>
 ```py
 run = True
 while run:
@@ -12,7 +12,7 @@ while run:
             pygame.quit()
             sys.exit()
 ```
-<em>press escape key once implementation</em>
+<em>press escape key once -> quit game implementation</em>
 ```py
 run = True
 while run:
@@ -23,7 +23,7 @@ while run:
                 pygame.quit()
                 sys.exit()
 ```
-<em>click once implementation</em>
+<em>click once -> quit game implementation</em>
 ```py
 run = True
 clicked = False
@@ -35,7 +35,6 @@ while run:
             run = False
             pygame.quit()
             sys.exit()
-    
 ```
 but if write things like this every time we want to exit, 
 
