Update 8.26 Class Assign different ID on each instantiation.md

--- a/Today I learned/8.26 Class Assign different ID on each instantiation.md
+++ b/Today I learned/8.26 Class Assign different ID on each instantiation.md
@@ -73,7 +73,10 @@ class Robot:
     
     def __init__(self, name):
         self.name = name
+        
+        # every time __init__ is called, this class variable is incremented by 1
         Robot.id += 1
+        
         self.id = Robot.id
         
 robot_1 = Robot("Do")   # first instantiation
