Update 8.26 Class Assign different ID on each instantiation.md

--- a/Today I learned/8.26 Class Assign different ID on each instantiation.md
+++ b/Today I learned/8.26 Class Assign different ID on each instantiation.md
@@ -85,6 +85,6 @@ print(robot_1.id)       # class variable id is 1
 robot_2 = Robot("Re")   # second instantiation
 print(robot_2.id)       # class variable id is 2
 
-robot_3 = Robot("Re")   # second instantiation
+robot_3 = Robot("Mi")   # second instantiation
 print(robot_3.id)       # class variable id is 3
 ```
