Update and rename 9.6 datetime.md to 9.6 datetime, secrets.md

--- a/Today I learned/9.6 datetime, secrets.md
+++ b/Today I learned/9.6 datetime, secrets.md
@@ -1,4 +1,6 @@
 # 9.6 Today I learned...
+
+# How to get date, or time
 ```py
 import datetime
 
@@ -20,4 +22,17 @@ with open(f"N back Result({now.date()}).txt","a") as file:
 2022-09-06 07:09:22.375807
 N back Report - 2022-09-06 07:09:22
 2022-09-06
+```
+
+# random numbers
+
+```py
+
+import secrets
+
+randomNumbers = secrets.SystemRandom()
+
+print(randomNumbers.randint(0,1))
+
+print([randomNumbers.randint(5,10) for _ in range(10)])
 ```
