Update 9.6 datetime, secrets.md

--- a/Today I learned/9.6 datetime, secrets.md
+++ b/Today I learned/9.6 datetime, secrets.md
@@ -30,6 +30,7 @@ N back Report - 2022-09-06 07:09:22
 
 import secrets
 
+# with this line of code, I can use secrets just like random module
 randomNumbers = secrets.SystemRandom()
 
 print(randomNumbers.randint(0,1))
