Update 9.14 Save json file, and retrieve it, Make files invisible, uneditable.md

--- a/Today I learned/9.14 Save json file, and retrieve it, Make files invisible, uneditable.md
+++ b/Today I learned/9.14 Save json file, and retrieve it, Make files invisible, uneditable.md
@@ -114,8 +114,11 @@ except:
 
 We don't want users to cheat on the games so I decided to hide the `level.txt` file so that they can't modify it.
 
-This can be achieved by this code.
+<em>Making the file invisible</em>
 ```py
+import os
+--- snip ---
+
 # Make the level.txt file invisible
 os.system("attrib +h level.txt")   
 ```
@@ -138,6 +141,7 @@ But I realized that the game won't be able to read the file once it is invisible
 
 So we need to make it visible right before we dump the json file so that the game can successfully write it.
 ```py
+
 while run:
     --- snip ---
     # Make the file visible again
@@ -150,3 +154,80 @@ while run:
     # Make the file invisible
     os.system("attrib +h level.txt")  
 ```
+
+## But now I decided to make the file uneditable just to be sure that people won't cheat.
+
+<em>Making the file uneditable</em>
+```py
+# Make the file uneditable - aka read only mode
+os.chmod("level.txt",S_IREAD)
+```
+
+We want to put the code line right after we dump the file so that people can't modify the file.
+
+```py
+from stat import S_IREAD, S_IRGRP, S_IROTH, S_IRWXU
+
+--- snip ---
+
+while run:
+    --- snip ---
+    # Make the file visible again
+    os.system("attrib -h level.txt")  
+    
+    # save the data into the textfile
+    with open("level.txt","w") as levelfile:
+        json.dump(level_system, levelfile)
+    
+    # Make the file invisible
+    os.system("attrib +h level.txt")  
+    
+    # Make the file uneditable
+    os.chmod("level.txt",S_IREAD)
+```
+
+But the problem is when we play the game again, the file is still in 'uneditable mode', the program now can't access to the file.
+
+So we have to make the file editable again.
+
+<em>To make the file editable</em>
+```py
+# Make the file editable again
+if os.path.isfile("level.txt"):
+    os.chmod("level.txt", S_IRWXU|S_IREAD)
+```
+And this code `if os.path.isfile("level.txt"):` means that if `level.txt` exists it shows `True` otherwise `False`
+
+We have to put this line of code here
+```py
+from stat import S_IREAD, S_IRGRP, S_IROTH, S_IRWXU
+
+--- snip ---
+
+while run:
+    --- snip ---
+    # Make the file visible again
+    os.system("attrib -h level.txt")
+    
+    # Make the file editable again
+    if os.path.isfile("level.txt"):
+        os.chmod("level.txt", S_IRWXU|S_IREAD)
+    
+    # save the data into the textfile
+    with open("level.txt","w") as levelfile:
+        json.dump(level_system, levelfile)
+    
+    # Make the file invisible
+    os.system("attrib +h level.txt")  
+    
+    # Make the file uneditable
+    os.chmod("level.txt",S_IREAD)
+```
+
+Basically what we are doing is,
+
+1. Make the file visible
+2. Make the file editable if the file exists
+3. Modify the file
+4. Make the file invisible
+5. Make the file uneditable
