Update 9.14 Save json file, and retrieve it, Make files invisible, uneditable.md

--- a/Today I learned/9.14 Save json file, and retrieve it, Make files invisible, uneditable.md
+++ b/Today I learned/9.14 Save json file, and retrieve it, Make files invisible, uneditable.md
@@ -182,7 +182,7 @@ while run:
     # Make the file invisible
     os.system("attrib +h level.txt")  
     
-    # Make the file uneditable
+    # Make the file uneditable - aka read only mode
     os.chmod("level.txt",S_IREAD)
 ```
 
