--- a/Today I learned/9.14 Save json file, and retrieve it, Make files invisible, uneditable.md
+++ b/Today I learned/9.14 Save json file, and retrieve it, Make files invisible, uneditable.md
@@ -1,8 +1,8 @@
 # 9/14 Today I learned...
 
 # 1. Save the game data and load the data file again
-# 2. make the game data file invisible
-# 3. make the game data file uneditable
+# 2. Make the game data file invisible
+# 3. Make the game data file uneditable
 
 ---
 
