Update 9.14 Save json file, and retrieve it, Make files invisible, uneditable.md

--- a/Today I learned/9.14 Save json file, and retrieve it, Make files invisible, uneditable.md
+++ b/Today I learned/9.14 Save json file, and retrieve it, Make files invisible, uneditable.md
@@ -166,7 +166,7 @@ os.chmod("level.txt",S_IREAD)
 We want to put the code line right after we dump the file so that people can't modify the file.
 
 ```py
-from stat import S_IREAD, S_IRGRP, S_IROTH, S_IRWXU
+from stat import S_IREAD, S_IRWXU
 
 --- snip ---
 
@@ -200,7 +200,7 @@ And this code `if os.path.isfile("level.txt"):` means that if `level.txt` exists
 
 We have to put this line of code here
 ```py
-from stat import S_IREAD, S_IRGRP, S_IROTH, S_IRWXU
+from stat import S_IREAD, S_IRWXU
 
 --- snip ---
 
