Update 9.14 Save json file, and retrieve it, Make files invisible, uneditable.md

--- a/Today I learned/9.14 Save json file, and retrieve it, Make files invisible, uneditable.md
+++ b/Today I learned/9.14 Save json file, and retrieve it, Make files invisible, uneditable.md
@@ -228,6 +228,6 @@ Basically what we are doing is,
 
 1. Make the file visible
 2. Make the file editable if the file exists
-3. Modify the file
+3. Modify the data and save the modified data to json file
 4. Make the file invisible
 5. Make the file uneditable
