--- a/Today I learned/11.29 Polymorphism.md
+++ b/Today I learned/11.29 Polymorphism.md
@@ -25,13 +25,22 @@ class Korean(Person):
 
 class Indian(Person):
     def say_hello(self):
-        print("ਸਤ ਸ੍ਰੀ ਅਕਾਲ"
+        print("ਸਤ ਸ੍ਰੀ ਅਕਾਲ")
 
 p1 = Person()
 p2 = Korean()
 p3 = Indian()
 
-party = [p1,p2,p3]
+party = [p1, p2, p3]
 for each_person in party:
     each_person.say_hello()
 ```
+
+<em>Output</em>
+```
+hello
+안녕하세요?
+ਸਤ ਸ੍ਰੀ ਅਕਾਲ
+```
+
+The same named function `say_hello()` has different outputs.
