--- a/Today I learned/11.29 Polymorphism.md
+++ b/Today I learned/11.29 Polymorphism.md
@@ -13,7 +13,7 @@ hello()   #hello
 hello()   #hello
 ```
 
-But Polymorphism allows same named function to create multiple outputs
+But Polymorphism allows same named function to create different outputs
 ```py
 class Person:
     def say_hello(self):
