--- a/Today I learned/11.29 Polymorphism.md
+++ b/Today I learned/11.29 Polymorphism.md
@@ -2,18 +2,19 @@
 
 # Polymorphism
 
-Normally when we create a function, there is only one output that can be created.
+Normally when we create a function, there is only one functionality.
 
 ```py
-def hello():
+def say_hello():
     print("hello")
 
-hello()   #hello
-hello()   #hello
-hello()   #hello
+say_hello()   #hello
+say_hello()   #hello
+say_hello()   #hello
 ```
+In this case above, this `say_hello()` function has only one functionality : `print("hello")`
 
-But Polymorphism allows same named function to create different outputs
+But Polymorphism allows same named function to create different outputs by having different functionalities.
 ```py
 class Person:
     def say_hello(self):
