--- a/Today I learned/11.29 Polymorphism.md
+++ b/Today I learned/11.29 Polymorphism.md
@@ -24,13 +24,13 @@ class Korean(Person):
     def say_hello(self):
         print("안녕하세요?")
 
-class Indian(Person):
+class Punjabi(Person):
     def say_hello(self):
         print("ਸਤ ਸ੍ਰੀ ਅਕਾਲ")
 
 p1 = Person()
 p2 = Korean()
-p3 = Indian()
+p3 = Punjabi()
 
 party = [p1, p2, p3]
 for each_person in party:
