Source added on 1.9

--- a/Today I learned/1.9 statement in return.md
+++ b/Today I learned/1.9 statement in return.md
@@ -16,3 +16,11 @@ We can rewrite this again
 def is_positive(num):
     return True if num > 0 else None
 ```
+
+```py
+def is_positive(num):
+    return num > 0 if num > 0 else None
+```
+
+
+Source : [Simplify Your If Statements That Return Booleans](https://adamj.eu/tech/2020/01/17/simplify-your-ifs-that-return-booleans/)
