--- a/Today I learned/1.9 statement in return.md
+++ b/Today I learned/1.9 statement in return.md
@@ -22,5 +22,24 @@ def is_positive(num):
     return num > 0 if num > 0 else None
 ```
 
+How do we simplify this return statement?
+
+
+```py
+def is_even(num):
+    if num % 2 == 0 :
+        return True
+    return False
+```
+
+<details>
+    <summary>Answer</summary>
+
+    ```py
+    def is_even(num):
+        return num % 2 == 0
+    ```
+
+</details>
 
 Source : [Simplify Your If Statements That Return Booleans](https://adamj.eu/tech/2020/01/17/simplify-your-ifs-that-return-booleans/)
