exercise palindrome added

--- a/Today I learned/1.9 simplifying return statement, while loop condition.md
+++ b/Today I learned/1.9 simplifying return statement, while loop condition.md
@@ -58,7 +58,7 @@ After the while loop, there is one condition `x < 5 `.
 
 If this condition becomes False, this while loop stops.
 
-In other words, as long as the condition after the while loop is True, it runs.
+In other words, as long as the condition is True, it runs.
 
 ### Precedure
 
@@ -121,4 +121,43 @@ x is 5 now, and the condition(`x < 5`) is <strong>`False`</strong>, and it break
 2
 3
 4
+```
+
+### while loop conditions
+
+```py
+x = int(input())
+while x < 10 and x % 2 == 0:
+    print("hello")
+```
+
+This means that this while loop only executes if x < 10 and x is even number.
+
+# Formatting
+
+```py
+a = "hello"
+b = len(a)
+
+print("{} {}".format(a,b))
+```
+
+is the same as
+
+```py
+a = "hello"
+b = len(a)
+
+print(f"{a} {b}")
+```
+
+
+Also
+
+```py
+a = 1.42313
+
+print("{:.2f}".format(a)) # 1.42
+
+print(f"{a:.2f}") # 1.42
 ```
