--- a/Today I learned/1.10 unpacking tuples.md
+++ b/Today I learned/1.10 unpacking tuples.md
@@ -17,3 +17,12 @@ human1_firstname, human1_lastname = save_firstname_lastname("John Conor")
 print(human1_firstname)
 print(human1_lastname)
 ```
+
+Another example of unpacking
+
+```py
+lst_of_info = [(180,"S"), (164,"Q"), (175,"J")]
+
+for height,initial in lst_of_info:
+    print(f"height : {height}, initial : {initial}")
+```
