--- a/Today I learned/1.10 unpacking tuples.md
+++ b/Today I learned/1.10 unpacking tuples.md
@@ -26,3 +26,11 @@ lst_of_info = [(180,"S"), (164,"Q"), (175,"J")]
 for height,initial in lst_of_info:
     print(f"height : {height}, initial : {initial}")
 ```
+
+result
+
+```
+height : 180, initial : S
+height : 164, initial : Q
+height : 175, initial : J
+```
