--- a/Today I learned/1.10 unpacking tuples.md
+++ b/Today I learned/1.10 unpacking tuples.md
@@ -34,3 +34,16 @@ height : 180, initial : S
 height : 164, initial : Q
 height : 175, initial : J
 ```
+
+
+# How to see attributes and methods
+
+```py
+print(dir(str))
+print(dir(int))
+print(dir(dict))
+
+print(help(str))
+print(dir(int))
+print(dir(dict))
+```
