--- a/Today I learned/1.11 Default representation.md
+++ b/Today I learned/1.11 Default representation.md
@@ -54,6 +54,8 @@ some_complicating_function()
     This is a very complicated function and this is the description of the function.
 ```
 
+# Docstring
+
 We can also add docstring to class, classs' methods.
 
 ```py
@@ -72,6 +74,8 @@ print(help(Person()))
 print(help(Person().__init__))
 print(help(Person().greeting))
 ```
+
+Result
 
 ```
 Help on Person in module __main__ object:
