--- a/Today I learned/04.08 Asynchronicity.md
+++ b/Today I learned/04.08 Asynchronicity.md
@@ -1,5 +1,28 @@
 # Asynchronicity
 
+Programs usually executes from top to bottom.
+
+If a python file looks like this
+
+```py
+def foo():
+    # Do something foo
+
+def bar():
+    # Do something bar
+```
+
+The program will execute foo() first, and it waits til `foo()` is done.
+
+And then `bar()` starts running.
+
+```
+Do something foo
+Do something bar
+```
+
+However, Asynchronous programming is different. It allows us to execute functions at the same time.
+
 ```py
 
 import asyncio
@@ -28,4 +51,12 @@ async def main():
     print("Main finishes")
 
 asyncio.run(main())
+```
+
+```
+Main Starts
+Task Starts
+Main is running still
+Task finishes
+Main finishes
 ```
