--- a/Today I learned/2023/05.11 equivalent, identical, aliased object.md
+++ b/Today I learned/2023/05.11 equivalent, identical, aliased object.md
@@ -1,10 +1,10 @@
 # Equivalent, identical, aliased object
 
-[Equivalent](#)
+[Equivalent](#a-and-b-are-equivalent-have-same-value-and-identicalshare-the-same-memory-address)
 
-[Identical](#)
+[Identical](#c-and-d-are-equivalent-have-same-value-but-not-identicalshare-the-different-memory-addresses)
 
-[Aliased Object](#)
+[Aliased Object](#when-an-object-is-aliased)
 
 
 ![image](https://github.com/kjs29/Python/assets/96529477/156d971c-ca25-4c33-a20e-1a27da585d95)
@@ -115,4 +115,3 @@ print(d)    #[1,2,3,4]
 ```
 
 We changed `c` but `d` is affected since `d` has the same reference as `c`.
-
